opam-version: "2.0"
maintainer: "Hannes Mehnert <hannes@mehnert.org>"
authors: ["Hannes Mehnert <hannes@mehnert.org>"]
homepage: "https://github.com/mirage/arp"
doc: "https://mirage.github.io/arp/"
dev-repo: "git+https://github.com/mirage/arp.git"
bug-reports: "https://github.com/mirage/arp/issues"
license: "ISC"
depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {>= "2.7.0"}
  "cstruct" {>= "6.0.0"}
  "ipaddr" {>= "4.0.0"}
  "macaddr" {>= "4.0.0"}
  "logs"
  "mirage-time" {>= "4.0.0"}
  "lwt"
  "duration"
  "ethernet" {>= "3.0.0"}
  "fmt" {>= "0.8.7"}
  "alcotest" {with-test}
  "mirage-vnetif" {with-test & >= "0.5.0"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test & os != "macos"}
]
synopsis: "Address Resolution Protocol purely in OCaml"
description: """
ARP is an implementation of the address resolution protocol (RFC826) purely in
OCaml.  It handles IPv4 protocol addresses and Ethernet hardware addresses only.
"""
