(executable
 (name bench)
 (libraries arp-mirage mirage-vnetif lwt ipaddr tcpip.ethif mirage-unix mirage-clock-unix mirage-types mirage-random mirage-random-test lwt.unix))

(alias
 (name runbench)
 (package arp-mirage)
 (deps bench.exe)
 (action (run ./bench.exe)))

(alias
 (name runtest)
 (package arp-mirage)
 (deps bench.exe))
